2011-01-10 Alex Tutubalin <lexa@lexa.ru>
	* OpenMP for green equilibration
2010-12-20 Alex Tutubalin <lexa@lexa.ru>
	   * Green equilibration, CFA pixel cleaning and CFA line denoise by
	     Emil Martinec. Code adaped to LibRaw by Jacques Desmis
2010-12-13 Alex Tutubalin <lexa@lexa.ru>
	   * Imported new AMaZE and CA_correct code provided by Jacques Desmis
2010-11-27 Alex Tutubalin <lexa@lexa.ru>
	   * malloc changed to calloc to make valgrind happy with
	     uninitialized values

2010-11-20 Alex Tutubalin <lexa@lexa.ru>
	   * Imported actual AMaZE implementation from RawTherapee
	   * OpenMP with LIBRAW_USE_OPENMP
	   
2010-11-15 Alex Tutubalin <lexa@lexa.ru>
	   * Initial revision